# aoc2023

./: LICENSE  README.md  aoc2023.cabal  example4test
.github/workflows/: haskell.yml
app/: Main.hs
lib/: Day1.hs  Day10.hs  Day11.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  THDays.hs
