cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             uni
maintainer:         uniwuni@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, THDays

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.15.1.0, template-haskell, listsafe, text, timeit, vector >= 0.13.0.1, vector-split, parallel
    hs-source-dirs:   app, lib
    default-language: Haskell2010
    ghc-options: -Wall -O2 -threaded
